<resources>
    <string name="app_name">SafeHome</string>

    <!-- Bottom navigation screen -->
    <string name="home">Home</string>
    <string name="sign_in">SignIn</string>
    <string name="first_name">Enter first name</string>
    <string name="first_name_hint">First Name</string>
    <string name="mobile_number_hint">Mobile Number</string>
    <string name="enter_mobile_number">Enter Mobile Number</string>
    <string name="history">History</string>
    <string name="community">Community</string>
    <string name="menu">Menu</string>
    <string name="submit">Submit</string>
    <string name="dont_have_an_account">Don\'t have an account?</string>
    <string name="signup"><u>Sign Up</u></string>
    <string name="last_name_hint">Last Name</string>
    <string name="last_name">Enter Last Name</string>
    <string name="enter_email_address">Enter Email address</string>
    <string name="email_address_hint">Email Address</string>
    <string name="signIn"><u>Sign In</u></string>
    <string name="enter_your_otp">Enter your OTP</string>
    <string name="otp_indicator_text">We have sent an OTP to your Mobile Number</string>
    <string name="resend_code_in"><u>Resend OTP</u></string>
    <string name="zero">" 00:00"</string>
    <string name="verify">Verify</string>
    <string name="resend">Resend</string>
    <string name="select_state">Please Select State</string>
    <string name="select_city">Please Select City</string>
    <string name="select_community">Please Select Community</string>
    <string name="select_block">Please Select Block</string>
    <string name="select_flot">Please Select Flat</string>
    <string name="terms_and_condition"><u>Terms and Conditions</u></string>
    <string name="i_agree">I agree to the</string>
    <string name="already_have_an_account">Already have an account?</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="navigation_drawer_open">Open</string>
    <string name="navigation_drawer_close">Close</string>
    <string name="my_family">My Family</string>
    <string name="my_vehicles">My Vehicle\'s</string>
    <string name="tenant">Tenant</string>
    <string name="e_intercom">E-Intercom</string>
    <string name="notification">Notifications</string>
    <string name="settings">Settings</string>
    <string name="support">Support</string>
    <string name="sign_out">Signout</string>
    <string name="essentials">Essentials</string>
    <string name="commute">Commute</string>
    <string name="utility">Utility</string>
    <string name="coupons">Coupons</string>
    <string name="daily_help">Daily help</string>
    <string name="services">Services</string>
    <string name="visitors">Visitors</string>
    <string name="facilities">Facilities</string>
    <string name="bills_and_funds">Maintenance</string>
    <string name="events">Events</string>
    <string name="meetings">Meeting</string>
    <string name="notice">Notice</string>
    <string name="complaints">Complaints</string>
    <string name="add_flat">Add Flat</string>
    <string name="please_enter_first_name">Please Enter First Name</string>
    <string name="please_enter_mobile_number">Please Enter Mobile Number</string>
    <string name="please_enter_valid_mobile_number">Please Enter Valid Mobile Number</string>
    <string name="please_enter_last_name">Please Enter Last Name</string>
    <string name="invalid_otp">Invalid OTP</string>
    <string name="loading">Loading...</string>
    <string name="agree_terms_and_conditions">Please select the terms and conditions</string>
    <string name="please_enter_OTP">Please Enter OTP</string>
    <string name="please_enter_valid_OTP">Please Enter Valid OTP</string>
    <string name="D_Mart">D Mart</string>
    <string name="add_member">Add Member</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="reset">Reset</string>
    <string name="select_age_group">Select Age Group</string>
    <string name="age_group">Age Group</string>
    <string name="please_select_age_group">Please Select Age Group</string>
    <string name="vehicle_type">Vehicle Type</string>
    <string name="select_vehicle_type">Select Vehicle Type</string>
    <string name="please_select_vehicle_type">Please Select Vehicle Type</string>
    <string name="select_vehicle_model">Select Model</string>
    <string name="please_select_vehicle_model">Please Select Vehicle Model</string>
    <string name="vehicle_number_hint">Vehicle Number</string>
    <string name="enter_vehicle_number">Enter Vehicle Number</string>
    <string name="please_select_vehicle_number">Please Enter Vehicle Number</string>
    <string name="Vehicle_Model">Vehicle Model</string>
    <string name="state">State</string>
    <string name="city">City</string>
    <string name="block">Block</string>
    <string name="flat">Flat</string>
    <string name="give_permissions">Give the storage permissions.</string>
    <string name="edit">Edit</string>
    <string name="delete">delete</string>
    <string name="update">update</string>
    <string name="first_name_mandatory">First Name*</string>
    <string name="last_name_mandatory">Last Name*</string>
    <string name="mobile_number_mandatory">Mobile Number*</string>
    <string name="delete_family_member_alert">Are you sure want to delete this family member</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="vehicle_model_mandatory">Vehicle Model*</string>
    <string name="vehicle_number_mandatory">Vehicle Number*</string>
    <string name="vehicles">Vehicles</string>
    <string name="allotted_slots">Allotted Parking</string>
    <string name="add_tenant">Add Tenant</string>
    <string name="please_enter_vehicle_number">Please enter vehicle number</string>
    <string name="delete_tenant_alert">Are you sure you want to Delete this Tenant?</string>
    <string name="delete_vehicle_alert">Are you sure you want to Delete this Vehicle?</string>
    <string name="association_members">Association Members</string>
    <string name="residents">Residents</string>
    <string name="only_select_block">Select Block</string>
    <string name="alert">Alert</string>
    <string name="child_exit">Child Exit</string>
    <string name="emergency_contacts">Emergency Contacts</string>
    <string name="policies">Policies</string>
    <string name="forum">Forum</string>
    <string name="polls">Polls</string>
    <string name="maintenance">Maintenance</string>
    <string name="my_dues">Dues</string>
    <string name="History">History</string>
    <string name="Paid">Paid</string>
    <string name="invoice_period_title">Invoice Period :</string>
    <string name="due_date_title">Due Date :</string>
    <string name="total_invoice_amount_title">Invoiced Amount :</string>
    <string name="invoice">Invoice</string>
    <string name="pay_now">Pay Now</string>
    <string name="rupee">₹</string>
    <string name="view_invoice">View Invoice</string>
    <string name="market_place">Market Place</string>
    <string name="around_me">Around Me</string>
    <string name="ok">OK</string>
    <string name="Rs">\u20B9</string>
    <string name="resizable_text_read_more">      ....View More</string>
    <string name="resizable_text_read_less">      ....View Less</string>

    <string name="notice_dialog_txt">Dear Resident, Greeting for the dsy! When seeking information online or contacting support,  be cautious of patient scams of phishing attampts...  </string>
    <string name="acservice_repair"><![CDATA[ACService&Repair]]></string>
    <string name="relationship">Relationship</string>
    <string name="select_relationship">Select Relationship</string>
    <string name="please_select_relationship">Please Select Relationship</string>
    <string name="please_enter_valid_email">Please Enter valid Email</string>
    <string name="document"><u>Document</u></string>
    <string name="escalated_approval_txt">After 24 hours, you can send a reminder for request Approval</string>
    <string name="share"><u>Share</u></string>
    <string name="invoice1"><u>Invoice</u></string>
    <string name="guest">Guest</string>
    <string name="cab">Cab</string>
    <string name="delivery">Delivery</string>
    <string name="staff">Staff</string>
    <string name="others">Others</string>
    <string name="invite_for_visitor_text">For Hassle Free Access, Show this Number at the Gate &amp; Send your visitor this invitation too</string>

</resources>